public class Consts
{
    public static readonly string Player = "Player";
    
    //Brick Tags
    public static readonly string BRICK_PLATFORM = "BrickPlatform";
    public static readonly string BRICK_BRIDGE = "BrickBridge";
    
    public static readonly string TAG_STAIR = "Stair";
    
    public const string TAG_BRICK = "Brick";
    
    //Animation Tags
    public const string ANIM_RUN = "Run";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_VICTORY = "Victory";
}
